# cap-tools

./: .pre-commit-config.yaml  .xsdata.xml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
data/oasis/: example1.xml  example2.xml  example3.xml  example4.xml
scripts/: regenerate-badges.sh  regenerate-models.sh  validate-data.sh
src/cap_tools/: __init__.py  models.py  utils.py
tests/: conftest.py  strategies.py  test_alert_state.py  test_area.py  test_fuzz_models.py  test_fuzz_utils.py  test_info.py  test_oasis_examples.py  test_roundtrip_utils.py  test_utils.py
tests/quick/: test_area.py  test_info.py  test_oasis_examples.py  test_utils.py
