[project]
name = "cap-tools"
requires-python = ">=3.10"
version = "3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
pre_bump_hooks = ["poetry run pytest --hypothesis-profile pre-bump", "scripts/regenerate-badges.sh"]

[tool.coverage.run]
source = ["src", "tests"]

[tool.poetry]
name = "cap-tools"
version = "3.1.1"
description = "Python data bindings for the Common Alerting Protocol Version."
license = "MIT"
authors = ["Björn Reetz <git@bjoern-reetz.de>"]
readme = "README.md"
homepage = "https://github.com/bjoern-reetz/cap-tools"
repository = "https://github.com/bjoern-reetz/cap-tools"
documentation = "https://github.com/bjoern-reetz/cap-tools"
keywords = ["cap", "common alerting protocol", "read", "write", "tool", "util"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Topic :: Utilities",
]
packages = [{include = "cap_tools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
xsdata = "^24.4"
multidict = "^6.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
xsdata = {extras = ["cli", "lxml"], version = "*"}
pytest-cov = "^5.0.0"
hypothesis = {extras = ["cli"], version = "^6.100.5"}
pybadges = "^3.0.1"
setuptools = "^71.0.4"

[tool.poetry.group.pyright]
optional = true

[tool.poetry.group.pyright.dependencies]
pyright = "^1.1.372"

[tool.pyright]
strict = ["src", "tests"]
pythonVersion = "3.10"
pythonPlatform = "All"
# reportCallInDefaultInitializer = "warning"  # use ruff B008 instead
# reportImplicitOverride = "warning"  # requires Python >= 3.12
# reportImplicitStringConcatenation = "warning"  # use ruff ISC instead
reportImportCycles = "warning"
reportMissingSuperCall = "warning"
reportPropertyTypeMismatch = "warning"
# reportShadowedImports = "warning"  # use ruff A0 instead
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedCallResult = "warning"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report=term:skip-covered",
    "--hypothesis-profile=fast",
    "--import-mode=importlib",
    "--strict-config",
    "--strict-markers",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests", "pyproject.toml"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",  # missing docstrings
    "FIX",  # flake8-fixme
    "PLC0414",  # useless-import-alias
    # taken from https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",  # tab-indentation
    "E111",  # indentation-with-invalid-multiple
    "E114",  # indentation-with-invalid-multiple-comment
    "E117",  # over-indented
    "D206",  # indent-with-spaces
    "D300",  # triple-single-quotes
    "Q000",  # bad-quotes-inline-string
    "Q001",  # bad-quotes-multiline-string
    "Q002",  # bad-quotes-docstring
    "Q003",  # avoidable-escaped-quote
    "COM812",  # missing-trailing-comma
    "COM819",  # prohibited-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "ISC002",  # multi-line-implicit-string-concatenation
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["S101"]
"tests/strategies.py" = ["B008", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"
